Add better colors and more detail to world

--- a/index.html
+++ b/index.html
@@ -111,28 +111,38 @@
             renderer.setSize(window.innerWidth, window.innerHeight);
             renderer.setPixelRatio(window.devicePixelRatio);
             renderer.autoClear = false; // We'll manually clear for dual viewport
+            renderer.shadowMap.enabled = true;
+            renderer.shadowMap.type = THREE.PCFSoftShadowMap;
+            renderer.outputEncoding = THREE.sRGBEncoding; // Proper color space
             document.body.appendChild(renderer.domElement);
 
             // Main scene
             scene = new THREE.Scene();
-            scene.background = new THREE.Color(0x87ceeb); // Sky blue
-            scene.fog = new THREE.Fog(0x87ceeb, 20, 50);
+            scene.background = new THREE.Color(0xa8daff); // Lighter, prettier sky blue
+            scene.fog = new THREE.Fog(0xa8daff, 25, 55);
 
-            // Lighting
-            const ambientLight = new THREE.AmbientLight(0xffffff, 0.4);
+            // Lighting - improved for better visuals
+            const ambientLight = new THREE.AmbientLight(0xffffff, 0.6);
             scene.add(ambientLight);
 
-            const directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
+            const directionalLight = new THREE.DirectionalLight(0xffffff, 1.0);
             directionalLight.position.set(10, 20, 10);
             directionalLight.castShadow = true;
+            directionalLight.shadow.mapSize.width = 2048;
+            directionalLight.shadow.mapSize.height = 2048;
             scene.add(directionalLight);
 
-            // Ground plane
+            // Add a warm fill light
+            const fillLight = new THREE.DirectionalLight(0xffa95c, 0.3);
+            fillLight.position.set(-10, 10, -10);
+            scene.add(fillLight);
+
+            // Ground plane - improved with better grass color
             const groundGeometry = new THREE.PlaneGeometry(50, 50);
             const groundMaterial = new THREE.MeshStandardMaterial({
-                color: 0x3a8c3a,
-                roughness: 0.8,
-                metalness: 0.2
+                color: 0x4a9d4a,
+                roughness: 0.9,
+                metalness: 0.0
             });
             const ground = new THREE.Mesh(groundGeometry, groundMaterial);
             ground.rotation.x = -Math.PI / 2;
@@ -143,42 +153,80 @@
             function createHouse(size) {
                 const house = new THREE.Group();
 
-                // House colors - vibrant and varied
+                // House colors - more sophisticated palette
                 const wallColors = [
-                    0xff6b6b, 0x4ecdc4, 0x45b7d1, 0xf7b731, 0x5f27cd,
-                    0x00d2d3, 0xff9ff3, 0xfeca57, 0x48dbfb, 0xff6348,
-                    0x1dd1a1, 0xee5a6f, 0xc44569, 0x786fa6, 0xf8a5c2,
-                    0xfa8231, 0x6c5ce7, 0xa29bfe, 0xfd79a8, 0xfdcb6e
+                    0xffb3ba, 0xbae1ff, 0xffffba, 0xbaffc9, 0xffdfba,
+                    0xe0bbe4, 0xffd8be, 0xc7ceea, 0xb5ead7, 0xffc8dd,
+                    0xa2d2ff, 0xffafcc, 0xcdb4db, 0xffc8b4, 0xbde0fe
                 ];
                 const roofColors = [
-                    0x8b4513, 0xa0522d, 0x654321, 0x704214, 0xe74c3c,
-                    0xc0392b, 0x7f8c8d, 0x34495e, 0x2c3e50, 0x8e44ad
+                    0x8b4513, 0xa0522d, 0xd2691e, 0xcd853f, 0xe74c3c,
+                    0xc0392b, 0x95a5a6, 0x7f8c8d, 0x2c3e50, 0x8e44ad
                 ];
 
                 // Base (walls)
-                const baseHeight = size;
+                const baseHeight = size * 1.2; // Taller proportions
                 const baseGeo = new THREE.BoxGeometry(size, baseHeight, size);
                 const baseMat = new THREE.MeshStandardMaterial({
                     color: wallColors[Math.floor(Math.random() * wallColors.length)],
-                    roughness: 0.8,
-                    metalness: 0.1
+                    roughness: 0.7,
+                    metalness: 0.0
                 });
                 const base = new THREE.Mesh(baseGeo, baseMat);
                 base.position.y = baseHeight / 2;
                 base.castShadow = true;
+                base.receiveShadow = true;
                 house.add(base);
 
+                // Door
+                const doorGeo = new THREE.BoxGeometry(size * 0.3, size * 0.5, 0.05);
+                const doorMat = new THREE.MeshStandardMaterial({
+                    color: 0x654321,
+                    roughness: 0.8
+                });
+                const door = new THREE.Mesh(doorGeo, doorMat);
+                door.position.set(0, size * 0.25, size / 2 + 0.01);
+                door.castShadow = true;
+                house.add(door);
+
+                // Windows - 2 on front
+                const windowGeo = new THREE.BoxGeometry(size * 0.2, size * 0.2, 0.05);
+                const windowMat = new THREE.MeshStandardMaterial({
+                    color: 0x87ceeb,
+                    roughness: 0.1,
+                    metalness: 0.5,
+                    emissive: 0x4a90e2,
+                    emissiveIntensity: 0.2
+                });
+
+                const window1 = new THREE.Mesh(windowGeo, windowMat);
+                window1.position.set(-size * 0.25, baseHeight * 0.6, size / 2 + 0.01);
+                house.add(window1);
+
+                const window2 = new THREE.Mesh(windowGeo, windowMat);
+                window2.position.set(size * 0.25, baseHeight * 0.6, size / 2 + 0.01);
+                house.add(window2);
+
+                // Side windows
+                const window3 = new THREE.Mesh(windowGeo, windowMat);
+                window3.position.set(size / 2 + 0.01, baseHeight * 0.6, 0);
+                house.add(window3);
+
+                const window4 = new THREE.Mesh(windowGeo, windowMat);
+                window4.position.set(-size / 2 - 0.01, baseHeight * 0.6, 0);
+                house.add(window4);
+
                 // Roof (pyramid)
-                const roofHeight = size * 0.6;
-                const roofGeo = new THREE.ConeGeometry(size * 0.7, roofHeight, 4);
+                const roofHeight = size * 0.7;
+                const roofGeo = new THREE.ConeGeometry(size * 0.75, roofHeight, 4);
                 const roofMat = new THREE.MeshStandardMaterial({
                     color: roofColors[Math.floor(Math.random() * roofColors.length)],
-                    roughness: 0.7,
-                    metalness: 0.2
+                    roughness: 0.8,
+                    metalness: 0.1
                 });
                 const roof = new THREE.Mesh(roofGeo, roofMat);
                 roof.position.y = baseHeight + roofHeight / 2;
-                roof.rotation.y = Math.PI / 4; // Rotate 45° for pyramid alignment
+                roof.rotation.y = Math.PI / 4;
                 roof.castShadow = true;
                 house.add(roof);
 
@@ -188,56 +236,76 @@
             // Function to create a stick figure person
             function createPerson() {
                 const person = new THREE.Group();
-                const personColor = [
-                    0xff6b6b, 0x4ecdc4, 0x45b7d1, 0xf7b731, 0x5f27cd,
-                    0xff9ff3, 0xfeca57, 0x48dbfb, 0x1dd1a1
-                ][Math.floor(Math.random() * 9)];
 
-                const material = new THREE.MeshStandardMaterial({
-                    color: personColor,
-                    roughness: 0.6,
-                    metalness: 0.3
+                // Better color palette for people
+                const skinColors = [0xffdab9, 0xf5cba7, 0xd2b48c, 0xcd9575];
+                const shirtColors = [
+                    0xff6b6b, 0x4ecdc4, 0x45b7d1, 0xf7b731, 0x5f27cd,
+                    0xff9ff3, 0xfeca57, 0x48dbfb, 0x1dd1a1, 0xee5a6f
+                ];
+                const pantsColors = [0x2c3e50, 0x34495e, 0x5d6d7e, 0x1c2833, 0x566573];
+
+                const skinColor = skinColors[Math.floor(Math.random() * skinColors.length)];
+                const shirtColor = shirtColors[Math.floor(Math.random() * shirtColors.length)];
+                const pantsColor = pantsColors[Math.floor(Math.random() * pantsColors.length)];
+
+                const skinMat = new THREE.MeshStandardMaterial({
+                    color: skinColor,
+                    roughness: 0.7,
+                    metalness: 0.0
+                });
+
+                const shirtMat = new THREE.MeshStandardMaterial({
+                    color: shirtColor,
+                    roughness: 0.8,
+                    metalness: 0.1
+                });
+
+                const pantsMat = new THREE.MeshStandardMaterial({
+                    color: pantsColor,
+                    roughness: 0.9,
+                    metalness: 0.0
                 });
 
                 // Head
-                const headGeo = new THREE.SphereGeometry(0.15, 16, 16);
-                const head = new THREE.Mesh(headGeo, material);
-                head.position.y = 1.3;
+                const headGeo = new THREE.SphereGeometry(0.18, 16, 16);
+                const head = new THREE.Mesh(headGeo, skinMat);
+                head.position.y = 1.5;
                 head.castShadow = true;
                 person.add(head);
 
-                // Body
-                const bodyGeo = new THREE.CylinderGeometry(0.08, 0.08, 0.6, 8);
-                const body = new THREE.Mesh(bodyGeo, material);
-                body.position.y = 0.8;
+                // Body (shirt)
+                const bodyGeo = new THREE.CylinderGeometry(0.12, 0.14, 0.7, 8);
+                const body = new THREE.Mesh(bodyGeo, shirtMat);
+                body.position.y = 0.9;
                 body.castShadow = true;
                 person.add(body);
 
                 // Left Arm
-                const armGeo = new THREE.CylinderGeometry(0.04, 0.04, 0.5, 8);
-                const leftArm = new THREE.Mesh(armGeo, material);
-                leftArm.position.set(-0.15, 0.9, 0);
-                leftArm.rotation.z = Math.PI / 6;
+                const armGeo = new THREE.CylinderGeometry(0.05, 0.04, 0.6, 8);
+                const leftArm = new THREE.Mesh(armGeo, shirtMat);
+                leftArm.position.set(-0.18, 1.0, 0);
+                leftArm.rotation.z = Math.PI / 8;
                 leftArm.castShadow = true;
                 person.add(leftArm);
 
                 // Right Arm
-                const rightArm = new THREE.Mesh(armGeo, material);
-                rightArm.position.set(0.15, 0.9, 0);
-                rightArm.rotation.z = -Math.PI / 6;
+                const rightArm = new THREE.Mesh(armGeo, shirtMat);
+                rightArm.position.set(0.18, 1.0, 0);
+                rightArm.rotation.z = -Math.PI / 8;
                 rightArm.castShadow = true;
                 person.add(rightArm);
 
-                // Left Leg
-                const legGeo = new THREE.CylinderGeometry(0.04, 0.04, 0.5, 8);
-                const leftLeg = new THREE.Mesh(legGeo, material);
-                leftLeg.position.set(-0.08, 0.25, 0);
+                // Left Leg (pants)
+                const legGeo = new THREE.CylinderGeometry(0.06, 0.05, 0.6, 8);
+                const leftLeg = new THREE.Mesh(legGeo, pantsMat);
+                leftLeg.position.set(-0.08, 0.3, 0);
                 leftLeg.castShadow = true;
                 person.add(leftLeg);
 
-                // Right Leg
-                const rightLeg = new THREE.Mesh(legGeo, material);
-                rightLeg.position.set(0.08, 0.25, 0);
+                // Right Leg (pants)
+                const rightLeg = new THREE.Mesh(legGeo, pantsMat);
+                rightLeg.position.set(0.08, 0.3, 0);
                 rightLeg.castShadow = true;
                 person.add(rightLeg);
 
@@ -282,6 +350,7 @@
                 format: THREE.RGBAFormat,
                 generateMipmaps: true,
                 minFilter: THREE.LinearMipmapLinearFilter
+                // Keep in linear space for shader sampling
             });
 
             // Cube camera for omnidirectional rendering
@@ -333,8 +402,9 @@
                     // Sample the cubemap at this direction
                     vec4 color = textureCube(cubemap, direction);
 
-                    // Brighten the output to match the top viewport
-                    color.rgb *= 3.0;
+                    // Brightness adjustment to match main camera
+                    // Slightly boost since cubemap rendering can be darker
+                    color.rgb *= 1.8;
 
                     gl_FragColor = color;
                 }
